--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 
-    <title>Muh Stopwatch</title>
+    <title>My Stopwatch</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
 
-   <h1 id="th1">Idly Stopwatch</h1>
+   <h1 id="th1"> Stopwatch</h1>
    
 <div id="container">
 
